--- a/index.html
+++ b/index.html
@@ -31,14 +31,55 @@
     <link rel="stylesheet" href="assets/css/openbosniana-styles.css">
     <link rel="stylesheet" href="assets/css/openbosniana.css">
     <link href="assets/fonts/remixicon.css" rel="stylesheet">
+    <style>
+        #networks{display:block;max-width:none;overflow:hidden;padding:0
+         }#networks>div{display:block;margin:auto;padding:0 24px;width:100%
+         }#networks p{margin:auto;max-width:600px
+         }#networks #networks-index{padding:48px 0
+         }#networks #networks-index>div{padding:0 28px
+         }#networks #networks-grid{list-style:none;margin:auto;max-width:800px;padding:0;text-align:center
+         }#networks #networks-grid li{display:inline-block;margin:16px;padding:0
+         }@media(min-width:320px){#networks #networks-grid li{margin:26px
+         }
+         }@media(min-width:425px){#networks #networks-grid li{margin:32px
+         }
+         }#networks #networks-grid img{display:block;margin:12px;width:64px
+         }#networks #networks-grid a{color:inherit
+         }#networks .networks-tab .app-display{flex-direction:column
+         }#networks .networks-tab .app-display__description{display:flex;flex-wrap:wrap;justify-content:center;padding:0 0 16px
+         }#networks .networks-tab .app-display__description>*{padding:8px;text-align:left
+         }#networks .networks-tab .app-display__description>img{height:80px;width:80px
+         }@media(min-width:1000px){#networks .networks-tab .app-display__description{flex-wrap:nowrap;padding-bottom:0
+         }
+         }#networks.initialized>div.networks-tab>.networks-back{background-position:50%;background-repeat:no-repeat;cursor:pointer;height:100%;left:0;position:absolute;top:0;width:64px
+         }#networks.initialized{background-color:#3689e6;background-position:50%;background-size:cover;color:#fff;position:relative;text-shadow:0 0 6px #000;transition:height .25s ease-in-out
+         }#networks.initialized>div{position:absolute;top:0;transition:transform .25s ease-in-out;width:100%;will-change:transform
+         }#networks.initialized>div h2::-moz-selection,#networks.initialized>div p::-moz-selection{background-color:#d3d3d3;color:#000;text-shadow:none
+         }#networks.initialized>div h2::selection,#networks.initialized>div p::selection{background-color:#d3d3d3;color:#000;text-shadow:none
+         }#networks.initialized>div#networks-index{left:-100%;padding:48px 0
+         }#networks.initialized>div#networks-index.active{transform:translate3d(100%,0,0)
+         }#networks.initialized>div.networks-tab{left:100%;padding:32px 24px 32px 64px
+         }#networks.initialized>div.networks-tab.active{transform:translate3d(-100%,0,0)
+         }
+    </style>
   </head>
   <body>
+<div class="container-fluid">
     <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
-      <div class="container">
-        <div class="nav-vendor-wrap">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+    <button class="nav-drop-menu" id="dropdownBtn">
+        <i class="ri-arrow-down-fill" id="dropdownIcon"></i>
+        <div class="nav-dropdown-content navbar-color">
+            <p>Latest release</p>
+            <a href="changelogs/index.html">Changelog</a>
+            <a href="downloads/index.html">Download</a>
+            <p></p>
+            <a href="wiki/installation-instructions/index.html">Installation instructions</a>
+            <a href="wiki/doc/index.html">Documentation</a>
         </div>
-      </div>
+    </button>
+     <div class="container-fluid">
+          <a class="navbar-brand nav-vendor" href="/"></a>
+    </div>
       <button class="btn-sakriveni">
         <a href="bs/index.html" class="text-white">
           <i class="ri-global-line"></i> BS </a>
@@ -46,8 +87,9 @@
       <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img id="menu-icon" src="assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
       </button>
+    <div class="container-fluid">
       <div class="collapse navbar-collapse" id="ms-navbar">
-        <ul class="navbar-nav mr-3">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a href="#">
               <i class="ri-home-4-fill"></i> Home </a>
@@ -81,8 +123,9 @@
               <i class="ri-global-line"></i> BS </a>
           </li>
         </ul>
-      </div>
+      </div></div>
     </nav>
+</div>
     <div class="mshero-margin-top">
       <div class="ms-hero ms-hero-material">
         <div class="container">
@@ -549,90 +592,23 @@
         </div>
       </div>
     </div>
-    <div class="trans-bckgr-1 pb-2">
-      <div class="container-fluid pt-2 pb-2">
-        <div class="pt-2">
-          <div class="row pt-2">
-            <!-- First Card: Codeberg -->
-            <div class="col-lg-3 col-sm-6">
-              <div class="card card-info tabela-okvir">
-                <a href="https://codeberg.org" target="_blank">
-                  <div class="row">
-                    <div class="col-4">
-                      <div class="img-avatar-circle-logo">
-                        <img src="assets/img/codeberg.svg" alt="Codeberg logo">
-                      </div>
-                    </div>
-                    <div class="col-8">
-                      <h4 class="text-info-c">
-                        <b class="logos-b">codeberg.org</b>
-                      </h4>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- Second Card: SourceForge -->
-            <div class="col-lg-3 col-sm-6">
-              <div class="card card-warning tabela-okvir">
-                <a href="https://sourceforge.net" target="_blank">
-                  <div class="row">
-                    <div class="col-4">
-                      <div class="img-avatar-circle-logo">
-                        <img src="assets/img/sf.svg" alt="SourceForge logo">
-                      </div>
-                    </div>
-                    <div class="col-8">
-                      <h4 class="color-warning">
-                        <b class="logos-b">sf.net</b>
-                      </h4>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- Third Card: GitHub -->
-            <div class="col-lg-3 col-sm-6">
-              <div class="card card-dark tabela-okvir">
-                <a href="https://github.com" target="_blank">
-                  <div class="row">
-                    <div class="col-4">
-                      <div class="img-avatar-circle-logo">
-                        <img src="assets/img/github-logo.svg" alt="GitHub logo">
-                      </div>
-                    </div>
-                    <div class="col-8">
-                      <h4 class="color-dark">
-                        <b class="logos-b">github.com</b>
-                      </h4>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- Fourth Card: Kernel.org -->
-            <div class="col-lg-3 col-sm-6">
-              <div class="card card-danger tabela-okvir">
-                <a href="https://kernel.org" target="_blank">
-                  <div class="row">
-                    <div class="col-4">
-                      <div class="img-avatar-circle-logo">
-                        <img src="assets/img/linux-tux.svg" alt="Linux Kernel logo">
-                      </div>
-                    </div>
-                    <div class="col-8">
-                      <h4 class="color-danger">
-                        <b class="logos-b">kernel.org</b>
-                      </h4>
-                    </div>
-                  </div>
-                </a>
-              </div>
+
+    <div class="trans-bckgr-1">
+        <section>
+          <div id="networks">
+            <div id="networks-index">
+              <ul id="networks-grid">
+                <a href="https://github.com" target="_blank"><li class="read-more"><img src="assets/img/github-logo.svg" alt="GitHub logo">GitHub</li></a>
+                <a href="https://kernel.org" target="_blank"><li class="read-more"><img src="assets/img/linux-tux.svg" alt="Linux Kernel logo">Kernel</li></a>
+                <a href="https://sourceforge.net" target="_blank"><li class="read-more"><img src="assets/img/sf.svg" alt="SourceForge logo">SourceForge</li></a>
+                <a href="https://gitlab.com" target="_blank"><li class="read-more"><img src="assets/img/gitlab_logo.svg" alt="GitLab">GitLab</li></a>
+                <a href="https://codeberg.org" target="_blank"><li class="read-more"><img src="assets/img/codeberg.svg" alt="Codeberg logo">Codeberg</li></a>
+              </ul>
             </div>
           </div>
-        </div>
-      </div>
+        </section>
     </div>
+
     <div class="ms-slidebar " id="ms-slidebar">
       <ul class="ms-slidebar-menu" id="slidebar-menu">
         <li class="nav-item">
