--- a/404.html
+++ b/404.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404 | OpenBosniana | Free, Private and Secure Operating System</title>
+    <title>404 | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
     <meta name="description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
     <meta name="author" content="Denis Maslo">
-
     <meta property="og:site_name" content="OpenBosniana OS">
     <meta property="og:title" content="
 
-            OpenBosniana | Free, Private, Secure Operating System
+             OpenBosniana OS | Free, Private, Secure | Free Linux Operating System
 
     ">
-    <meta property="og:url" content="https://bosniana.org/">
+    <meta property="og:url" content="https://bosniana.org/404.html">
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
     <link rel="canonical" href="https://www.bosniana.org/404.html">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
     <link rel="manifest" href="assets/favicon/manifest.json">
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-    <meta name="application-name" content="OpenBosniana OS"/>
-    <meta name="msapplication-TileColor" content="#00bcd4"/>
+    <meta name="application-name" content="OpenBosniana OS" />
+    <meta name="msapplication-TileColor" content="#00bcd4" />
     <meta name="msapplication-TileImage" content="assets/favicon/144x144.png">
     <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
     <link rel="stylesheet" href="assets/css/fonts.css">
@@ -32,53 +31,119 @@
     <link rel="stylesheet" href="assets/css/openbosniana-styles.css">
     <link rel="stylesheet" href="assets/css/openbosniana.css">
     <link href="assets/fonts/remixicon.css" rel="stylesheet">
+    <style>
+        #networks{display:block;max-width:none;overflow:hidden;padding:0
+         }#networks>div{display:block;margin:auto;padding:0 24px;width:100%
+         }#networks p{margin:auto;max-width:600px
+         }#networks #networks-index{padding:48px 0
+         }#networks #networks-index>div{padding:0 28px
+         }#networks #networks-grid{list-style:none;margin:auto;max-width:800px;padding:0;text-align:center
+         }#networks #networks-grid li{display:inline-block;margin:16px;padding:0
+         }@media(min-width:320px){#networks #networks-grid li{margin:26px
+         }
+         }@media(min-width:425px){#networks #networks-grid li{margin:32px
+         }
+         }#networks #networks-grid img{display:block;margin:12px;width:64px
+         }#networks #networks-grid a{color:inherit
+         }#networks .networks-tab .app-display{flex-direction:column
+         }#networks .networks-tab .app-display__description{display:flex;flex-wrap:wrap;justify-content:center;padding:0 0 16px
+         }#networks .networks-tab .app-display__description>*{padding:8px;text-align:left
+         }#networks .networks-tab .app-display__description>img{height:80px;width:80px
+         }@media(min-width:1000px){#networks .networks-tab .app-display__description{flex-wrap:nowrap;padding-bottom:0
+         }
+         }#networks.initialized>div.networks-tab>.networks-back{background-position:50%;background-repeat:no-repeat;cursor:pointer;height:100%;left:0;position:absolute;top:0;width:64px
+         }#networks.initialized{background-color:#3689e6;background-position:50%;background-size:cover;color:#fff;position:relative;text-shadow:0 0 6px #000;transition:height .25s ease-in-out
+         }#networks.initialized>div{position:absolute;top:0;transition:transform .25s ease-in-out;width:100%;will-change:transform
+         }#networks.initialized>div h2::-moz-selection,#networks.initialized>div p::-moz-selection{background-color:#d3d3d3;color:#000;text-shadow:none
+         }#networks.initialized>div h2::selection,#networks.initialized>div p::selection{background-color:#d3d3d3;color:#000;text-shadow:none
+         }#networks.initialized>div#networks-index{left:-100%;padding:48px 0
+         }#networks.initialized>div#networks-index.active{transform:translate3d(100%,0,0)
+         }#networks.initialized>div.networks-tab{left:100%;padding:32px 24px 32px 64px
+         }#networks.initialized>div.networks-tab.active{transform:translate3d(-100%,0,0)
+         }
+    </style>
 </head>
-
-
 <body>
-<nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
-    <div class="container">
-        <div class="nav-vendor-wrap">
-            <a class="navbar-brand nav-vendor" href="index.html"></a>
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
+    <button class="nav-drop-menu" id="dropdownBtn">
+        <i class="ri-arrow-down-fill" id="dropdownIcon"></i>
+        <div class="nav-dropdown-content navbar-color">
+            <p>Latest release</p>
+            <a href="changelogs/index.html">Changelog</a>
+            <a href="downloads/index.html">Download</a>
+            <p></p>
+            <a href="wiki/installation-instructions/index.html">Installation instructions</a>
+            <a href="wiki/doc/index.html">Documentation</a>
+        </div>
+    </button>
+     <div class="container-fluid">
+          <a class="navbar-brand nav-vendor" href="/"></a>
+    </div>
+      <button class="btn-sakriveni">
+        <a href="bs/index.html" class="text-white">
+          <i class="ri-global-line"></i> BS </a>
+      </button>
+      <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <img id="menu-icon" src="assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
+      </button>
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="ms-navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#">
+              <i class="ri-home-4-fill"></i> Home </a>
+          </li>
+          <li class="nav-item">
+            <a href="project/index.html">
+              <i class="ri-file-info-line"></i> Project </a>
+          </li>
+          <li class="nav-item">
+            <a href="packages/1.html">
+              <i class="ri-apps-line"></i> Packages </a>
+          </li>
+          <li class="nav-item">
+            <a href="wiki/index.html">
+              <i class="ri-book-2-line"></i> Wiki </a>
+          </li>
+          <li class="nav-item">
+            <a href="blog/index.html">
+              <i class="ri-news-line"></i> Blog </a>
+          </li>
+          <li class="nav-item">
+            <a href="gallery/index.html">
+              <i class="ri-image-fill"></i> Gallery </a>
+          </li>
+          <li class="nav-item">
+            <a href="downloads/index.html">
+              <i class="ri-download-2-fill"></i> Downloads </a>
+          </li>
+          <li class="nav-item">
+            <a href="bs/index.html">
+              <i class="ri-global-line"></i> BS </a>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+</div>
+
+
+
+<div class="bg-light">
+    <div class="container-fluid">
+        <div class="mt-2 pt-2">
+            <div class="mb-2 pb-2 mt-2 pt-2">
+                <div class="container center-block bg-2-dark p-3">
+                <h2 class="text-center text-dark"><b class="bg-danger p-2 text-dark">404</b> / <span>Page not found</span></h2>
+                <h4 class="text-center text-dark mt-2 pt-2">Sorry, the page you've requested does not exist.</h4>
+                <div class="container center-block text-center p-2">
+                <a href="https://bosniana.org/" class="btn bg-dark text-white">Return to the home page
+                </a></div>
+                </div>
+            </div>
         </div>
     </div>
-    <button class="btn-sakriveni">
-        <a href="bs/index.html" class="text-white">
-            <i class="ri-global-line"></i> BS
-        </a>
-    </button>
-    <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img id="menu-icon" src="assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
-    </button>
-
-
-    <div class="collapse navbar-collapse" id="ms-navbar">
-        <ul class="navbar-nav mr-3">
-            <li class="nav-item"><a href="index.html"><i class="ri-home-4-fill"></i> Home</a></li>
-            <li class="nav-item"><a href="project/index.html"><i class="ri-file-info-line"></i> Project</a></li>
-            <li class="nav-item"><a href="packages/index.html"><i class="ri-apps-line"></i> Packages</a></li>
-            <li class="nav-item"><a href="wiki/index.html"><i class="ri-book-2-line"></i> Wiki</a></li>
-            <li class="nav-item"><a href="blog/index.html"><i class="ri-news-line"></i> Blog</a></li>
-            <li class="nav-item"><a href="gallery/index.html"><i class="ri-image-fill"></i> Gallery</a></li>
-            <li class="nav-item"><a href="downloads/index.html"><i class="ri-download-2-fill"></i> Downloads</a></li>
-            <li class="nav-item"><a href="bs/index.html"><i class="ri-global-line"></i> BS</a></li>
-        </ul>
-    </div>
-</nav>
-<div class="bg-light">
-<div class="container-fluid">
-<div class="mt-2 pt-2">
-    <div class="mb-2 pb-2 mt-2 pt-2">
-      <div class="container center-block bg-2-dark p-3">
-        <h2 class="text-center text-dark"><b class="bg-danger p-2 text-dark">404</b> / <span>Page not found</span></h2>
-        <h4 class="text-center text-dark mt-2 pt-2">Sorry, the page you've requested does not exist.</h4>
-      <div class="container center-block text-center p-2">
-        <a href="https://bosniana.org/" class="btn bg-dark text-white">Return to the home page
-</a>
-     </div>
-    </div>
-</div>
-</div>
 </div>
     <div class="ms-slidebar " id="ms-slidebar">
             <ul class="ms-slidebar-menu" id="slidebar-menu">
@@ -95,59 +160,70 @@
     </div>
 
 
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pt-1 bg-sponsor">
-    <p class="text-white pb-1" style="letter-spacing:2px;">Powered by OpenBosniana OS</p>
-  </div>
-</section>
-</div>
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pb-2 pt-2">
-    <div class="linija-dole mb-2"></div>
-        <p style="letter-spacing:3px;"><b class="text-dark">Developed by</b> <a href="##" class="text-info-c" ><b>Denis Maslo</b></a></p>
-    <div class="linija-dole mt-2"></div>
-  </div>
-</section>
-</div>
-<footer>
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pt-1">
-    <img src="assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
-  </div>
-</section>
-<div class="linija-footer mb-1 mt-1"></div>
-</div>
-  <div class="footer-content">
-    <ul class="footer-links">
-      <li><a href="https://bosniana.org/project">Project</a></li>
-      <li><a href="https://bosniana.org/packages">Packages</a></li>
-      <li><a href="https://bosniana.org/wiki">Wiki</a></li>
-      <li><a href="https://bosniana.org/blog">Blog</a></li>
-      <li><a href="https://bosniana.org/gallery">Gallery</a></li>
-      <li><a href="https://bosniana.org/downloads">Downloads</a></li>
-    </ul>
-<div class="linija-footer mb-1"></div>
-    <div id="copyright">
-      <p class="text-center">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries.</p>
-      <p class="text-center">
-        Copyright &copy; bosniana.org 2022 -
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-        </script>
-      </p>
+    <div class="logo-font">
+      <section id="sponsor">
+        <div class="sponsor pt-1 bg-sponsor">
+          <p class="text-white pb-1" style="letter-spacing:2px;">Powered by OpenBosniana OS</p>
+        </div>
+      </section>
     </div>
-
-    <button id="backToTop" class="back-to-top bg-info">
-      <i class="ri-arrow-up-line"></i>
-    </button>
-  </div>
-</footer>
-
-
-
+    <div class="logo-font">
+      <section id="sponsor">
+        <div class="sponsor pb-2 pt-2">
+          <div class="linija-dole mb-2"></div>
+          <p style="letter-spacing:3px;">
+            <b class="text-dark">Developed by</b>
+            <a href="##" class="text-info-c">
+              <b>Denis Maslo</b>
+            </a>
+          </p>
+          <div class="linija-dole mt-2"></div>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="logo-font">
+        <section id="sponsor">
+          <div class="sponsor pt-1">
+            <img src="assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
+          </div>
+        </section>
+        <div class="linija-footer mb-1 mt-1"></div>
+      </div>
+      <div class="footer-content">
+        <ul class="footer-links">
+          <li>
+            <a href="https://bosniana.org/project">Project</a>
+          </li>
+          <li>
+            <a href="https://bosniana.org/packages">Packages</a>
+          </li>
+          <li>
+            <a href="https://bosniana.org/wiki">Wiki</a>
+          </li>
+          <li>
+            <a href="https://bosniana.org/blog">Blog</a>
+          </li>
+          <li>
+            <a href="https://bosniana.org/gallery">Gallery</a>
+          </li>
+          <li>
+            <a href="https://bosniana.org/downloads">Downloads</a>
+          </li>
+        </ul>
+        <div class="linija-footer mb-1"></div>
+        <div id="copyright">
+          <p class="text-center">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries.</p>
+          <p class="text-center"> Copyright &copy; bosniana.org 2022 - <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+          </p>
+        </div>
+        <button id="backToTop" class="back-to-top bg-info">
+          <i class="ri-arrow-up-line"></i>
+        </button>
+      </div>
+    </footer>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
@@ -164,7 +240,6 @@
 </script>
 
 <script src="assets/js/plugins.min.js"></script>
-<!-- <script src="assets/js/openbosniana.js"></script> -->
 <script>
 function slidebar() {
     var t = $(".ms-slidebar"),
@@ -226,5 +301,13 @@ $(document).ready(function() {
     slidebar();
 });
 </script>
+    <script>
+        const dropdownBtn = document.getElementById('dropdownBtn');
+        const dropdownIcon = document.getElementById('dropdownIcon');
+
+        dropdownBtn.addEventListener('click', function () {
+            this.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
