--- a/downloads/openbosniana-edu-kde.html
+++ b/downloads/openbosniana-edu-kde.html
@@ -73,6 +73,7 @@
         </ul>
     </div>
 </nav>
+</div>
 
 
 <div class="bodymargin"></div>
@@ -157,6 +158,7 @@
         </ul>
     </div>
 </nav>
+ </div>
 
 
 <div class="logo-font">
