--- a/downloads/openbosniana-home-kde.html
+++ b/downloads/openbosniana-home-kde.html
@@ -73,6 +73,7 @@
         </ul>
     </div>
 </nav>
+</div>
 
 
 <div class="bodymargin"></div>
@@ -153,6 +154,7 @@
         </ul>
     </div>
 </nav>
+ </div>
 
 
 <div class="logo-font">
