--- a/project/education.html
+++ b/project/education.html
@@ -98,7 +98,7 @@
               <i class="ri-home-4-fill"></i> Home </a>
           </li>
           <li class="nav-item active">
-            <a href="#">
+            <a href="index.html">
               <i class="ri-file-info-line"></i> Project </a>
           </li>
           <li class="nav-item">
