--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </h1>
                             <div class="naslovnamargin animated fadeInRight animation-delay-9">
                                 <h2 class="color-light pt-3 pl-2 pb-3 animated fadeInRight animation-delay-11">
-                                    <span><strong class="text-info-c animated fadeInRight animation-delay-13">Free, lightweight, complete </strong></span>operating system!
+                                    <span><strong class="text-info-c animated fadeInRight animation-delay-13">Free, lightweight, </strong></span>and complete operating system!
                                 </h2>
                             </div>
                         </header>
@@ -188,7 +188,7 @@
                                                         </span>
                                                     </div>
                                                     <div class="ms-list-text animated fadeInRight animation-delay-3">
-                                                        Free open-source operating system based on the Linux kernel and the GNU project.
+                                                        An open-source operating system built on the Linux kernel and the GNU Project.
                                                     </div>
                                                 </li>
                                                 <li>
@@ -198,7 +198,7 @@
                                                         </span>
                                                     </div>
                                                     <div class="ms-list-text animated fadeInRight animation-delay-7">
-                                                        Easy to use, lightweight and user-friendly desktop environment that can revive older hardware.
+                                                        Designed for ease of use, with a lightweight and user-friendly desktop environment that works seamlessly even on older hardware.
                                                     </div>
                                                 </li>
                                                 <li>
@@ -208,7 +208,7 @@
                                                         </span>
                                                     </div>
                                                     <div class="ms-list-text animated fadeInRight animation-delay-11">
-                                                        Thousands of completely free apps available to download and install with one click.
+                                                        Access thousands of completely free applications, ready to download and install via the application manager.
                                                     </div>
                                                 </li>
                                             </ul>
