--- a/404.html
+++ b/404.html
@@ -19,19 +19,19 @@
     <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
     <meta property="og:type" content="website">
     <link rel="canonical" href="https://www.bosniana.org/404.html">
-    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
-    <link rel="manifest" href="assets/favicon/manifest.json">
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
+    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="https://bosniana.org/rss.xml">
+    <link rel="manifest" href="https://bosniana.org/assets/favicon/manifest.json">
+    <link rel="icon" type="image/x-icon" href="https://bosniana.org/assets/favicon/favicon.ico" />
     <meta name="application-name" content="OpenBosniana OS"/>
     <meta name="msapplication-TileColor" content="#00bcd4"/>
-    <meta name="msapplication-TileImage" content="assets/favicon/144x144.png">
-    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="shortcut icon" href="assets/favicon/favicon.png">
-    <link rel="stylesheet" href="assets/css/openbosniana.min.css">
-    <link rel="stylesheet" href="assets/css/openbosniana-styles.css">
-    <link rel="stylesheet" href="assets/css/openbosniana.css">
-    <link href="assets/fonts/remixicon.css" rel="stylesheet">
+    <meta name="msapplication-TileImage" content="https://bosniana.org/assets/favicon/144x144.png">
+    <meta name="msapplication-config" content="https://bosniana.org/assets/favicon/browserconfig.xml">
+    <link rel="stylesheet" href="https://bosniana.org/assets/css/fonts.css">
+    <link rel="shortcut icon" href="https://bosniana.org/assets/favicon/favicon.png">
+    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana.min.css">
+    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana-styles.css">
+    <link rel="stylesheet" href="https://bosniana.org/assets/css/openbosniana.css">
+    <link href="https://bosniana.org/assets/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 
@@ -50,14 +50,14 @@
         </div>
     </button>
      <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+          <a class="navbar-brand nav-vendor" href="https://bosniana.org"></a>
     </div>
       <button class="btn-sakriveni">
-        <a href="bs/index.html" class="text-white">
+        <a href="https://bosniana.org/bs/index.html" class="text-white">
           <i class="ri-global-line"></i> BS </a>
       </button>
       <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img id="menu-icon" src="assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
+        <img id="menu-icon" src="https://bosniana.org/assets/img/menu.svg" alt="Menu Icon" width="34px" height="34px" />
       </button>
 
 <div class="container-fluid">
@@ -68,31 +68,31 @@
               <i class="ri-home-4-fill"></i> Home </a>
           </li>
           <li class="nav-item">
-            <a href="project/index.html">
+            <a href="https://bosniana.org/project/index.html">
               <i class="ri-file-info-line"></i> Project </a>
           </li>
           <li class="nav-item">
-            <a href="packages/1.html">
+            <a href="https://bosniana.org/packages/1.html">
               <i class="ri-apps-line"></i> Packages </a>
           </li>
           <li class="nav-item">
-            <a href="wiki/index.html">
+            <a href="https://bosniana.org/wiki/index.html">
               <i class="ri-book-2-line"></i> Wiki </a>
           </li>
           <li class="nav-item">
-            <a href="blog/index.html">
+            <a href="https://bosniana.org/blog/index.html">
               <i class="ri-news-line"></i> Blog </a>
           </li>
           <li class="nav-item">
-            <a href="gallery/index.html">
+            <a href="https://bosniana.org/gallery/index.html">
               <i class="ri-image-fill"></i> Gallery </a>
           </li>
           <li class="nav-item">
-            <a href="downloads/index.html">
+            <a href="https://bosniana.org/downloads/index.html">
               <i class="ri-download-2-fill"></i> Downloads </a>
           </li>
           <li class="nav-item">
-            <a href="bs/index.html">
+            <a href="https://bosniana.org/bs/index.html">
               <i class="ri-global-line"></i> BS </a>
           </li>
         </ul>
@@ -120,14 +120,14 @@
 </div>
     <div class="ms-slidebar " id="ms-slidebar">
             <ul class="ms-slidebar-menu" id="slidebar-menu">
-                <li class="nav-item"> <a href="index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
-                <li class="nav-item"> <a href="project/index.html">  <i class="ri-file-info-line"></i> Project</a> </li>
-                <li class="nav-item"> <a href="packages/index.html">  <i class="ri-apps-line"></i> Packages</a> </li>
-                <li class="nav-item"> <a href="wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
-                <li class="nav-item"> <a href="blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
-                <li class="nav-item"> <a href="gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
-                <li class="nav-item"> <a href="downloads/index.html">  <i class="ri-download-2-fill"></i> Downloads</a> </li>
-                <li class="nav-item"> <a href="bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/project/index.html">  <i class="ri-file-info-line"></i> Project</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/packages/index.html">  <i class="ri-apps-line"></i> Packages</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/downloads/index.html">  <i class="ri-download-2-fill"></i> Downloads</a> </li>
+                <li class="nav-item"> <a href="https://bosniana.org/bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
                 <div class="linija-dole"></div>
             </ul>
     </div>
