--- a/404.html
+++ b/404.html
@@ -146,7 +146,7 @@
 <div class="logo-font">
 <section id="sponsor">
   <div class="sponsor pt-1">
-    <img src="assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
+    <img src="https://bosniana.org/assets/img/vendor-logo.svg" style="height: 50px;" alt="logo">
   </div>
 </section>
 <div class="linija-footer mb-1 mt-1"></div>
